# CineVault

./: .gitattributes  .gitignore  ALL_FIXES_SUMMARY.md  BUILD_AND_FIX_HISTORY.md  BUILD_FIXES_AND_ICONS.md  BUILD_STATUS.md  CHANGES_SUMMARY.md  CI_FIXES.md  CNAME  CURRENT_IMPLEMENTATION_STATUS.md  DATABASE_SCHEMA.md  FINAL_BUILD_FIXES.md  FINAL_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  ICON_GENERATION.md  IMPLEMENTATION_STATUS.md  LATEST_FIXES.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PROJECT_UPDATES.md  QUICK_START.md  README.md  TESTING_GUIDE.md  UI_COMPONENTS.md  index.html  logs.txt  offline_media_library_core_design.md  offline_media_library_tmdb_extension.md  package-lock.json  package.json  tmp_rovodev_generate_icns.js  tmp_rovodev_generate_icons.js  tmp_rovodev_generate_icons.py  tmp_rovodev_icon_preview.html
assets/: index-BArrSZqT.css  index-BGzu95K1.js  index-BH0qaPMJ.css  index-BKPxFFDv.css  index-BesjFlBt.js  index-CLjHvtfk.css  index-CpUXBW9o.js  index-D2fDNHn2.js  index-DCFR3XPw.css  index-DlGe5qtg.js  index-vE66yN27.js
scripts/: download-deps.cjs  download-deps.js
src/: App.css  App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  README.md  icon.icns
src-tauri/src/: main.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/db/: audio_tracks.rs  collections.rs  connection.rs  migrations.rs  mod.rs  models.rs  operations.rs  playback.rs  playlists.rs  schema.rs  subtitles.rs  tests.rs
src-tauri/src/indexer/: hash.rs  metadata.rs  mod.rs  scanner.rs
src-tauri/src/player/: mod.rs  vlc.rs
(+72 files in other folders)
